Quick fixes to get page to build
Style css file was missing and index.html was referencing to d3
insecurely.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ rect {
 }
 
 </style>
-<link rel="stylesheet" href="fonts/bariol/bariol.css"/>
-<link rel="stylesheet" href="styles/style.css"/>  
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<link rel="stylesheet" href="style.css"/>  
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script type="text/javascript" src="autocomplete.js"></script>
 
 <body>
