--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ rect {
 
 </style>
 <link rel="stylesheet" href="style.css"/>  
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="d3.v3.min.js"></script>
+<script src="topojson.v1.min.js"></script>
 <script type="text/javascript" src="autocomplete.js"></script>
 
 <body>
