Minor changes and add tool tips
Add tool tips to easily identify employee. Add border.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <meta charset="utf-8">
 <head>
 <style>
@@ -27,28 +28,78 @@ rect {
   fill: orange;
 }
 
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  font-size: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
 </style>
 <link rel="stylesheet" href="style.css"/>  
 <script src="d3.v3.min.js"></script>
 <script src="topojson.v1.min.js"></script>
-<script type="text/javascript" src="autocomplete.js"></script>
-
+<script src="d3.tip.v0.6.3.js"></script>
+<script src="autocomplete.js"></script>
+</head>
 <body>
+<div id="searchBar"></div>
 <script>
 
-var width = 1600,
+var width = 800,
     height = 400,
     active = d3.select(null);
 
 var svg = d3.select("body").append("svg")
                                     .attr("width", width)
                                     .attr("height", height);
+
+var tip = d3.tip()
+  .attr('class', 'd3-tip')
+  .offset([-10, 0])
+  .html(function(d) {
+    return "<span style='color:red'>" + d.employee + "</span></br>" + d.dept;
+  })
  
+svg.call(tip);
+
 svg.append("rect")
     .attr("class", "background")
     .attr("width", width)
     .attr("height", height)
     .on("click", reset);
+
+var borderPath = svg.append("rect")
+.attr("x", 0)
+.attr("y", 0)
+.attr("height", height)
+.attr("width", width)
+.style("stroke", "#ccc")
+.style("fill", "none")
+.style("stroke-width", 1);
+
 
 var g = svg.append("g")
     .style("stroke-width", "1.5px");
@@ -63,7 +114,9 @@ d3.json("seats.json", function(error, data) {
     .append("g")
     .attr("transform", function(d) { return "translate("+ d.x_axis + "," + d.y_axis + ")"; })
     .attr("align", "center")
-    .on("click", clicked);    
+    .on("click", clicked)
+    .on('mouseover', tip.show)
+    .on('mouseout', tip.hide);    
 
   gg.append("rect")
     // .attr("x", function (d) { return d.x_axis; })
@@ -72,6 +125,7 @@ d3.json("seats.json", function(error, data) {
     .attr("width", function (d) { return d.width; })
     .attr("id", function(d) { return d.employee.split(" ").join("-"); })
     .attr("class", "feature");
+    // .style("fill", function (d) { getDeptColor()} );
     
 
   gg.append("text")
@@ -82,10 +136,20 @@ d3.json("seats.json", function(error, data) {
     .attr("cursor", "pointer")
     .attr("style", "font-size: 10px")
     .text(function(d) { 
-      var name = d.employee.split(" "),
-          first_name = name[0],
-          last_name = name[1];
-      return first_name.charAt(0) + last_name.charAt(0); 
+      
+      if (!d.employee) {
+        console.log("here");
+        return "";
+      }
+      else if (d.employee.indexOf(" ") > -1) {
+        var name = d.employee.split(" ")
+        var first_name = name[0];
+        var last_name = name[1];
+        return first_name.charAt(0) + last_name.charAt(0); 
+      } else {
+        return d.employee[0];
+      }
+
     });
 
   // g.selectAll("rect")
@@ -209,7 +273,7 @@ function reset() {
 
     //Setup and render the autocomplete
     function start() {
-        var mc = autocomplete(document.body)
+        var mc = autocomplete("#searchBar")
                 .keys(keys)
                 .dataField("employee")
                 .placeHolder("Search Employee - Start typing here")
@@ -220,4 +284,6 @@ function reset() {
     }
 
 </script>
-</head>
+
+</body>
+</html>
