--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 body {
   font-family: Arial;
+  padding-top: 50px;
+  padding-left: 25px;
+
 }
 
 .background {
@@ -166,6 +169,8 @@ d3.json("seats.json", function(error, data) {
 
   var select = d3.select("body")
     .append("div")
+    .append("p")
+      .text("Department: ")
     .append("select")
     .on("change", function() {
       var minX = Number.POSITIVE_INFINITY,
